<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorWhite"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:gravity="center"
                    android:padding="20dp"
                    android:text="@string/home_tv_rut"
                    android:textColor="@color/colorGray"
                    android:textSize="18sp"
                    android:textStyle="bold" />

            </RelativeLayout>

            <EditText
                android:id="@+id/etRut"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/main_rut_bg_editext"
                android:enabled="false"
                android:gravity="center"
                android:hint="@string/home_et_rut"
                android:imeOptions="actionDone"
                android:inputType="text"
                android:padding="10dp"
                android:textColor="@color/colorPrimary"
                android:textColorHint="@color/colorGray"
                android:textSize="20sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">


                    <TextView
                        android:id="@+id/tv1"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.33"
                        android:background="@drawable/main_rut_btn_number"
                        android:gravity="center"
                        android:paddingTop="20dp"
                        android:paddingBottom="20dp"
                        android:text="1"
                        android:textColor="@color/main_rut_btn_number"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/tv2"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.33"
                        android:background="@drawable/main_rut_btn_number"
                        android:gravity="center"
                        android:paddingTop="20dp"
                        android:paddingBottom="20dp"
                        android:text="2"
                        android:textColor="@color/main_rut_btn_number"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/tv3"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.33"
                        android:background="@drawable/main_rut_btn_number"
                        android:gravity="center"
                        android:paddingTop="20dp"
                        android:paddingBottom="20dp"
                        android:text="3"
                        android:textColor="@color/main_rut_btn_number"
                        android:textSize="18sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">


                    <TextView
                        android:id="@+id/tv4"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.33"
                        android:background="@drawable/main_rut_btn_number"
                        android:gravity="center"
                        android:paddingTop="20dp"
                        android:paddingBottom="20dp"
                        android:text="4"
                        android:textColor="@color/main_rut_btn_number"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/tv5"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.33"
                        android:background="@drawable/main_rut_btn_number"
                        android:gravity="center"
                        android:paddingTop="20dp"
                        android:paddingBottom="20dp"
                        android:text="5"
                        android:textColor="@color/main_rut_btn_number"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/tv6"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.33"
                        android:background="@drawable/main_rut_btn_number"
                        android:gravity="center"
                        android:paddingTop="20dp"
                        android:paddingBottom="20dp"
                        android:text="6"
                        android:textColor="@color/main_rut_btn_number"
                        android:textSize="18sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">


                    <TextView
                        android:id="@+id/tv7"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.33"
                        android:background="@drawable/main_rut_btn_number"
                        android:gravity="center"
                        android:paddingTop="20dp"
                        android:paddingBottom="20dp"
                        android:text="7"
                        android:textColor="@color/main_rut_btn_number"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/tv8"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.33"
                        android:background="@drawable/main_rut_btn_number"
                        android:gravity="center"
                        android:paddingTop="20dp"
                        android:paddingBottom="20dp"
                        android:text="8"
                        android:textColor="@color/main_rut_btn_number"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/tv9"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.33"
                        android:background="@drawable/main_rut_btn_number"
                        android:gravity="center"
                        android:paddingTop="20dp"
                        android:paddingBottom="20dp"
                        android:text="9"
                        android:textColor="@color/main_rut_btn_number"
                        android:textSize="18sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tvClean"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.33"
                        android:background="@drawable/main_rut_btn_number"
                        android:gravity="center"
                        android:paddingTop="20dp"
                        android:paddingBottom="20dp"
                        android:text="@string/home_tv_clean"
                        android:textColor="@color/main_rut_btn_clean"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/tv0"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.33"
                        android:background="@drawable/main_rut_btn_number"
                        android:gravity="center"
                        android:paddingTop="20dp"
                        android:paddingBottom="20dp"
                        android:text="0"
                        android:textColor="@color/main_rut_btn_number"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/tvK"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.33"
                        android:background="@drawable/main_rut_btn_number"
                        android:gravity="center"
                        android:paddingTop="20dp"
                        android:paddingBottom="20dp"
                        android:text="K"
                        android:textColor="@color/main_rut_btn_number"
                        android:textSize="18sp" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnClose"
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginBottom="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/main_btn_clean"
                    android:padding="10dp"
                    android:text="@string/home_btn_close"
                    android:textAllCaps="false"
                    android:textColor="@color/colorWhite"
                    android:visibility="visible" />

                <Button
                    android:id="@+id/btnSave"
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="5dp"
                    android:layout_marginBottom="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/main_btn_save"
                    android:padding="10dp"
                    android:text="@string/home_btn_save"
                    android:textAllCaps="false"
                    android:textColor="@color/colorWhite"
                    android:visibility="visible" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
